patches-dsl/tests/fixtures/errors/missing_required_param.patches
template needs_freq(freq: float) {
    in:  x
    out: y
    module osc : Osc { frequency: <freq> }
    osc.x <- $.x
    $.y   <- osc.out
}
patch {
    module v : needs_freq
    module out : AudioOut
    out.in_left <- v.y
}
